# TrueGraphics

./: CMakeLists.txt  LICENSE  MANUAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bindings/: module.cpp
build_check/: CMakeCache.txt
engine/include/truegraphics/animation/: Animator.h  Easing.h
engine/include/truegraphics/async/: Async.h
engine/include/truegraphics/core/: App.h  Config.h  Engine.h  Time.h  Uuid.h
engine/include/truegraphics/graphics/: Canvas3D.h  Gpu.h  Image.h  Renderer.h  Shader.h
engine/include/truegraphics/layout/: FlexLayout.h  Layout.h
engine/include/truegraphics/plugin/: Plugin.h
engine/include/truegraphics/resource/: Resources.h
engine/include/truegraphics/state/: State.h
engine/include/truegraphics/style/: Style.h  StyleEngine.h  Theme.h
engine/include/truegraphics/system/: Log.h  Profiler.h
engine/include/truegraphics/widgets/: Button.h  Canvas.h  Checkbox.h  Container.h  Dropdown.h  Image.h  Label.h  ListView.h  PasswordBox.h  ProgressBar.h  RadioButton.h  ScrollView.h  Slider.h  Table.h  Tabs.h  TextArea.h  TextBox.h  TreeView.h  Widget.h
engine/include/truegraphics/window/: Dpi.h  Input.h  Window.h
engine/src/animation/: Animator.cpp  Easing.cpp
engine/src/async/: Async.cpp
engine/src/core/: App.cpp  Config.cpp  Engine.cpp  Time.cpp  Uuid.cpp
engine/src/graphics/: Canvas3D.cpp  Gpu.cpp  Image.cpp  Renderer.cpp  Shader.cpp
engine/src/layout/: FlexLayout.cpp  Layout.cpp
engine/src/plugin/: Plugin.cpp
engine/src/resource/: Resources.cpp
engine/src/state/: State.cpp
engine/src/style/: Style.cpp  StyleEngine.cpp  Theme.cpp
engine/src/system/: Log.cpp  Profiler.cpp
engine/src/widgets/: Button.cpp  Canvas.cpp  Checkbox.cpp  Container.cpp  Dropdown.cpp  Image.cpp  Label.cpp  ListView.cpp  PasswordBox.cpp  ProgressBar.cpp  RadioButton.cpp  ScrollView.cpp  Slider.cpp  Table.cpp  Tabs.cpp  TextArea.cpp  TextBox.cpp  TreeView.cpp  Widget.cpp
engine/src/window/: Dpi.cpp  Input.cpp  Window.cpp
examples/: animation_demo.py  canvas_demo.py  check.py  counter_app.py  layout_demo.py  multi-window.py  showcase.py
python/truegraphics/: __init__.py  app.py  state.py  widgets.py
